# bittorrent-infrastructure-project

./: .gitignore  Cargo.toml  README.md  cSpell.json
.cargo/: config.toml
.github/workflows/: coverage.yaml  test.yaml  testing.yaml
bip_bencode/benches/: mod.rs
bip_bencode/src/access/: bencode.rs  convert.rs  list.rs
bip_bencode/src/mutable/: encode.rs
bip_bencode/src/reference/: bencode_ref.rs  decode.rs
bip_dht/src/: builder.rs  error.rs  lib.rs  router.rs
bip_dht/src/message/: announce_peer.rs  compact_info.rs  error.rs  find_node.rs  get_peers.rs  mod.rs  ping.rs  request.rs  response.rs
bip_dht/src/routing/: node.rs
bip_dht/src/worker/: bootstrap.rs  handler.rs  mod.rs  refresh.rs
bip_disk/examples/: add_torrent.rs
bip_disk/src/disk/: builder.rs
bip_disk/src/disk/fs/: mod.rs  native.rs
bip_disk/src/disk/fs/cache/: file_handle.rs
bip_disk/src/disk/tasks/: mod.rs
bip_disk/src/disk/tasks/helpers/: piece_accessor.rs  piece_checker.rs
bip_disk/src/memory/: block.rs
bip_disk/test/: complete_torrent.rs  mod.rs  remove_torrent.rs
bip_handshake/src/: transport.rs
bip_handshake/src/bittorrent/: framed.rs  message.rs
bip_handshake/src/handshake/: handshaker.rs
bip_handshake/src/handshake/handler/: handshaker.rs  initiator.rs  listener.rs  mod.rs
bip_handshake/src/message/: protocol.rs
bip_handshake/test/: test_bytes_after_handshake.rs  test_filter_block_all.rs  test_filter_whitelist_diff_data.rs  test_filter_whitelist_same_data.rs
bip_metainfo/examples/: create_torrent.rs
bip_metainfo/src/: accessor.rs  metainfo.rs
bip_metainfo/src/builder/: buffer.rs  mod.rs  worker.rs
bip_peer/src/: codec.rs
bip_peer/src/manager/: builder.rs  error.rs  mod.rs  peer_info.rs
bip_peer/src/message/: mod.rs  standard.rs
bip_peer/src/message/bits_ext/: handshake.rs  port.rs
bip_peer/src/message/prot_ext/: mod.rs  ut_metadata.rs
bip_peer/src/protocol/: extension.rs  null.rs  wire.rs
bip_select/src/: uber.rs
bip_select/src/discovery/: mod.rs
bip_select/src/revelation/: mod.rs
bip_util/src/: convert.rs  test.rs
bip_util/src/send/: split_sender.rs
bip_util/src/sha/: mod.rs
bip_util/src/trans/: locally_shuffled.rs  sequential.rs
bip_utracker/src/: announce.rs  contact.rs  error.rs  lib.rs  option.rs  request.rs  response.rs
bip_utracker/src/client/: dispatcher.rs
bip_utracker/src/server/: dispatcher.rs  handler.rs
bip_utracker/test/: test_client_full.rs  test_connect.rs  test_scrape.rs
contrib/umio/: Cargo.toml  README.md
contrib/umio/src/: buffer.rs  dispatcher.rs  eloop.rs  external.rs  lib.rs  provider.rs
contrib/umio/tests/: test_incoming.rs  test_notify.rs  test_outgoing.rs  test_shutdown.rs  test_timeout.rs
contrib/umio/tests/common/: mod.rs
examples/: README.md
examples/get_metadata/: Cargo.toml  README.md
examples/get_metadata/src/: main.rs
examples/simple_torrent/: Cargo.toml  README.md
examples/simple_torrent/src/: main.rs
