[workspace]
members = [
    "examples/get_metadata",
    "examples/simple_torrent",
    "packages/bencode",
    "packages/dht",
    "packages/disk",
    "packages/handshake",
    "packages/htracker",
    "packages/lpd",
    "packages/magnet",
    "packages/metainfo",
    "packages/peer",
    "packages/select",
    "packages/util",
    "packages/utp",
    "packages/utracker",
]

resolver = "2"

[workspace.package]
authors = ["Nautilus Cyberneering <info@nautilus-cyberneering.de>, Andrew <amiller4421@gmail.com>"]
categories = ["network-programming", "web-programming"]
description = "A collection of crates for building applications using bittorrent technologies."
documentation = "https://github.com/torrust/bittorrent-infrastructure-project"
edition = "2021"
homepage = "https://github.com/torrust/bittorrent-infrastructure-project"
keywords = ["bittorrent"]
license = "Apache-2.0"
publish = false                                                                                     # until we decide where to publish.
repository = "https://github.com/torrust/bittorrent-infrastructure-project"
rust-version = "1.71"
version = "1.0.0-alpha.1"

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
panic = 'unwind'
rpath = false
