[package]
name = "get_metadata"
description = "Examples For bip-rs"

authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
dht = { path = "../../packages/dht" }
handshake = { path = "../../packages/handshake" }
metainfo = { path = "../../packages/metainfo" }
peer = { path = "../../packages/peer" }
select = { path = "../../packages/select" }

clap = "3"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-codec = "0.1"
pendulum = "0.3"
hex = "0.4"
