[package]
description = "Examples For bip-rs"
name = "get_metadata"
readme = "README.md"

authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
dht = { path = "../../packages/dht" }
handshake = { path = "../../packages/handshake" }
peer = { path = "../../packages/peer" }
select = { path = "../../packages/select" }

clap = "3"
futures = "0.1"
hex = "0.4"
pendulum = "0.3"
tokio-codec = "0.1"
tokio-core = "0.1"
