[package]
description = "Examples For bip-rs"
name = "get_metadata"
readme = "README.md"

authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
dht = { path = "../../packages/dht" }
handshake = { path = "../../packages/handshake" }
metainfo = { path = "../../packages/metainfo" }
peer = { path = "../../packages/peer" }
select = { path = "../../packages/select" }

clap = "4"
futures = "0"
hex = "0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["codec"] }
tracing = "0"
tracing-subscriber = "0"
