[package]
name = "simple_torrent"
version = "0.1.0"
description = "Examples For bip-rs"

authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
disk = { path = "../../packages/disk" }
handshake = { path = "../../packages/handshake" }
metainfo = { path = "../../packages/metainfo" }
peer = { path = "../../packages/peer" }

clap = "2.25"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-timer = "0.1"
