[package]
description = "Examples For bip-rs"
name = "simple_torrent"
readme = "README.md"

authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true

repository.workspace = true
version.workspace = true

[dependencies]
disk = { path = "../../packages/disk" }
handshake = { path = "../../packages/handshake" }
metainfo = { path = "../../packages/metainfo" }
peer = { path = "../../packages/peer" }

clap = "4"
futures = "0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["codec"] }
tracing = "0"
tracing-subscriber = "0"
